--- a/src/app/components/vocabulary-edit/vocabulary-edit.component.html
+++ b/src/app/components/vocabulary-edit/vocabulary-edit.component.html
@@ -10,3 +10,7 @@
     <label>Language</label>
     <input clrInput type="text" [(ngModel)]="page!.language" name="de" placeholder="language for the vocabulary" />
 </clr-input-container>
+<clr-checkbox-wrapper>
+    <input clrCheckbox type="checkbox" [(ngModel)]="page!.disabled" />
+    <label>Disabled</label>
+</clr-checkbox-wrapper>
