--- a/src/app/components/vocabulary-list/vocabulary-list.component.css
+++ b/src/app/components/vocabulary-list/vocabulary-list.component.css
@@ -26,6 +26,10 @@ input {
     vertical-align: middle;
 } 
 
+.table th:first-child {
+    padding-left:2px;
+}
+
 .search {
     font-weight: normal;
 }
@@ -57,6 +61,10 @@ td {
 
 th span {
     padding-left:0.5rem;
+}
+
+td.phase {
+    padding-left:0.8rem;
 }
 
 h1 {
