use native encryption

--- a/src/app/components/passwords/passwords.component.html
+++ b/src/app/components/passwords/passwords.component.html
@@ -21,7 +21,7 @@
     </thead>
   }
   <tbody>
-    @for (entry of getEntries(); track entry; let i = $index) {
+    @for (entry of getEntries(); track $index; let i = $index) {
       <tr>
         <td>
           @if (!entry.edit) {
@@ -39,26 +39,26 @@
         </td>
         <td>
           @if (!entry.edit) {
-            <span>{{entry.passwordShow ? decryptPassword(entry.password) : '*********'}}</span>
+            <span>{{entry.passwordShow || entry.edit ? entry.decryptedPassword : '********'}}</span>
           } @else {
             <clr-password-container>
-              <input [type]="entry.passwordShow ? 'text' : 'password'" clrPassword [value]="decryptPassword(entry.password)" (input)="entry.password = encryptPasswordFromUi($event.target)">
+              <input [type]="entry.passwordShow ? 'text' : 'password'" clrPassword [(ngModel)]="entry.decryptedPassword" (input)="encryptPasswordFromUi($event.target, entry)">
             </clr-password-container>
           }
           @if (!entry.passwordShow && !entry.edit) {
-            <cds-icon class="showhide" shape="eye" size="20" (click)="entry.passwordShow = true"></cds-icon>
+            <cds-icon class="showhide" shape="eye" size="20" (click)="togglePasswordVisibility(entry)"></cds-icon>
           }
           @if (entry.passwordShow && !entry.edit) {
-            <cds-icon class="showhide" shape="eye-hide" size="20" (click)="entry.passwordShow = false"></cds-icon>
+            <cds-icon class="showhide" shape="eye-hide" size="20" (click)="togglePasswordVisibility(entry)"></cds-icon>
           }
         </td>
         <td class="last">
           @if (entry.edit) {
             <button type="button" class="btn btn-icon btn-sm" (click)="random(i)"><cds-icon shape="wand"></cds-icon></button>
-            <button type="button" class="btn btn-icon btn-sm btn-success" (click)="entry.edit=false"><cds-icon shape="check"></cds-icon></button>
+            <button type="button" class="btn btn-icon btn-sm btn-success" (click)="stopEditingEntry(entry)"><cds-icon shape="check"></cds-icon></button>
             <button type="button" class="btn btn-icon btn-sm btn-danger" (click)="entryToDelete=i"><cds-icon shape="trash"></cds-icon></button>
           } @else {
-            <button class="btn btn-icon btn-sm" (click)="entry.edit=true"><cds-icon shape="pencil"></cds-icon> edit</button>
+            <button class="btn btn-icon btn-sm" (click)="startEditingEntry(entry)"><cds-icon shape="pencil"></cds-icon> edit</button>
             <button class="btn btn-icon btn-sm btn-primary" (click)="clipboard(i)"><cds-icon shape="copy-to-clipboard"></cds-icon> copy password</button>
           }
         </td>
