--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@ button:focus {
 }
 
 .markdown-formatted pre {
-    background-color:#eee;
+    background-color:#f9f9f9;
     padding:10px;
     overflow-x:auto;
 }
