--- a/src/styles.css
+++ b/src/styles.css
@@ -158,29 +158,29 @@ app-auto-textarea .auto-textarea:focus,
     display:inline-block;
 }
 
-    .markdown-formatted .toc h3 {
-        margin-top:0;
-        font-size:1.3em;
-        line-height: 1.5em;
-        margin-bottom:0.5em;
-    }
+.markdown-formatted .toc h3 {
+    margin-top:0;
+    font-size:1.3em;
+    line-height: 1.5em;
+    margin-bottom:0.5em;
+}
 
-    .markdown-formatted ul {
-        margin:0 !important;
-        padding:0 !important;
-    }
+.markdown-formatted .toc ul {
+    margin:0;
+    padding-left:1.2em;
+}
 
-    .markdown-formatted .toc .toc-level-2 {
-        margin-left:1.0em;
-    }
+.markdown-formatted .toc .toc-level-2 {
+    margin-left:1.0em;
+}
 
-    .markdown-formatted .toc .toc-level-3 {
-        margin-left:1.8em;
-    }
+.markdown-formatted .toc .toc-level-3 {
+    margin-left:1.8em;
+}
 
-    .markdown-formatted .toc .toc-level-4 {
-        margin-left:2.8em;
-    }
+.markdown-formatted .toc .toc-level-4 {
+    margin-left:2.8em;
+}
         
 
 .markdown-formatted .bookmarks li {
@@ -192,15 +192,19 @@ app-auto-textarea .auto-textarea:focus,
     color:#ff0000;
 }
 
-.markdown-formatted ol, 
+.markdown-formatted ol,
 .markdown-formatted ul {
     list-style-position: outside;
-    margin-left: 1.2em;
+    padding-left: 1.5em;
+    margin: 0 0 0.75rem 0;
 }
 
-.markdown-formatted ul:not([cds-list]),
-.markdown-formatted ul {
-    margin-left: 1.5em;
+.markdown-formatted ul:not([cds-list]) {
+    list-style-type: disc;
+}
+
+.markdown-formatted ol {
+    list-style-type: decimal;
 }
 
 .markdown-formatted hr {
